chore(playground): update

--- a/playground/docs/index.mdx
+++ b/playground/docs/index.mdx
@@ -1,3 +1,5 @@
+import Foo from '../components/Foo.tsx'
+
 # Test markdown
 
 ## Hello
@@ -15,3 +17,5 @@ literals www.example.com, https://example.com and contact@example.com
 ```ts
 console.log('hello world')
 ```
+
+<Foo />
